tests/snapshots/snapshots__base64_help.snap
---
source: tests/snapshots.rs
expression: s
---
Base64 encoding and decoding

Usage: ubertool base64 [OPTIONS] <COMMAND>

Commands:
  encode  Encode input as base64 (standard alphabet, with padding)
  decode  Decode base64 input (standard alphabet, with padding)
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
