tests/snapshots/snapshots__top_level_help.snap
---
source: tests/snapshots.rs
expression: s
---
ubertool — agent-friendly developer utilities.

Output:
  --json   structured JSON on stdout (nothing else lands there)
  --quiet  bare values, pipe-friendly
  default  human-readable key: value lines

Exit codes:
  0  success
  1  general failure
  2  usage error
  3  input validation error
  4  i/o error
  5  cryptographic / integrity failure
  6  feature not built in this binary


Usage: ubertool [OPTIONS] <COMMAND>

Commands:
  base64        Base64 encoding and decoding
  basic-auth    HTTP Basic auth header encoding/decoding
  bcrypt        Bcrypt password hashing and verification
  case          String case conversion (snake/kebab/camel/pascal/etc.)
  csv           CSV to JSON conversion
  hash          Cryptographic hash functions (md5, sha1, sha224, sha256, sha384, sha512, sha3-256, sha3-512)
  html          HTML entity encoding and decoding
  hmac          Keyed-hash MAC (md5/sha1/sha224/sha256/sha384/sha512/sha3-256/sha3-512)
  json          JSON conversion: to-yaml / to-toml / minify / prettify
  markdown      Markdown to HTML conversion (CommonMark)
  jwt           JSON Web Token decode and verify (HS* only)
  password      Password strength scoring (zxcvbn)
  token         Random token generation (hex / base64 / alphanumeric)
  ulid          ULID generation
  toml          TOML conversion: to-json / to-yaml
  url           URL percent-encoding and decoding
  uuid          UUID generation (v4, v7)
  yaml          YAML conversion: to-json / to-toml
  xml           XML conversion: to-json / format
  integer-base  Integer base conversion (bases 2-36)
  ipv4          IPv4 utilities (parse, subnet, range-expand, to-ipv6)
  list          List separator conversion (comma/newline/space/tab/semicolon/pipe)
  roman         Roman numeral conversion (to-num / from-num, range 1-3999)
  slugify       URL slug generation
  sql           SQL formatter (pretty-print with indentation and keyword casing)
  temperature   Temperature unit conversion (celsius / fahrenheit / kelvin)
  text          Text encoding and analysis (to-binary, from-binary, to-unicode, from-unicode, to-nato, stats, diff, obfuscate)
  docker-run    Convert `docker run` command to docker-compose YAML
  safelink      Unwrap Outlook/Google/generic URL wrappers
  mac           MAC address utilities (generate random, look up vendor OUI)
  ipv6-ula      RFC4193 Unique Local IPv6 prefix generator
  math          Math expression evaluator (evalexpr)
  help          Print this message or the help of the given subcommand(s)

Options:
      --json
          Output as JSON to stdout. Human messages still go to stderr

  -q, --quiet
          Bare values only (pipe-friendly)

  -v, --verbose
          Verbose progress to stderr

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
